--- a/tests/Todo.API.UnitTests/Todo.API.UnitTests.csproj
+++ b/tests/Todo.API.UnitTests/Todo.API.UnitTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Todo.Application\Todo.Application.csproj" />
+    <ProjectReference Include="..\..\src\Todo.Application\Todo.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
